add item and user features

--- a/train.ipynb
+++ b/train.ipynb
@@ -1863,7 +1863,7 @@
    "id": "0a023bf4-f32c-48a3-a45c-2b9acf6688a5",
    "metadata": {},
    "source": [
-    "### Prepare features"
+    "### X_train, y_train"
    ]
   },
   {
@@ -2495,19 +2495,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aadddd9c-dac2-498d-90f0-3525ea8251bf",
+   "metadata": {},
+   "source": [
+    "### Prepare data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 142,
    "id": "f550f0cf-05b3-4ae7-a3b0-5cba3933f201",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# make joined dataset from 1-st layer (matching)\n",
+    "# make joined dataset from 1-st layer (matching)  -- old weeks + 6 weeks --\n",
     "df_join_train_matcher = pd.concat([data_train_matcher, data_val_matcher])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 143,
    "id": "46cebd47-64f2-44b1-9c86-d5df92b2c858",
    "metadata": {},
    "outputs": [
@@ -2594,7 +2602,7 @@
        "11          0.0        1520        1          0.0                0.0   2.19  "
       ]
      },
-     "execution_count": 129,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2605,212 +2613,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "id": "a210074f-8d12-4a3d-afad-6be584f23104",
+   "execution_count": 225,
+   "id": "5e52a46c-acb8-4a1e-ba44-4607abac2013",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>item_id</th>\n",
-       "      <th>manufacturer</th>\n",
-       "      <th>department</th>\n",
-       "      <th>brand</th>\n",
-       "      <th>commodity_desc</th>\n",
-       "      <th>sub_commodity_desc</th>\n",
-       "      <th>curr_size_of_product</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>25671</td>\n",
-       "      <td>2</td>\n",
-       "      <td>GROCERY</td>\n",
-       "      <td>National</td>\n",
-       "      <td>FRZN ICE</td>\n",
-       "      <td>ICE - CRUSHED/CUBED</td>\n",
-       "      <td>22 LB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>26081</td>\n",
-       "      <td>2</td>\n",
-       "      <td>MISC. TRANS.</td>\n",
-       "      <td>National</td>\n",
-       "      <td>NO COMMODITY DESCRIPTION</td>\n",
-       "      <td>NO SUBCOMMODITY DESCRIPTION</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>26093</td>\n",
-       "      <td>69</td>\n",
-       "      <td>PASTRY</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>BREAD</td>\n",
-       "      <td>BREAD:ITALIAN/FRENCH</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>26190</td>\n",
-       "      <td>69</td>\n",
-       "      <td>GROCERY</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>FRUIT - SHELF STABLE</td>\n",
-       "      <td>APPLE SAUCE</td>\n",
-       "      <td>50 OZ</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>26355</td>\n",
-       "      <td>69</td>\n",
-       "      <td>GROCERY</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>COOKIES/CONES</td>\n",
-       "      <td>SPECIALTY COOKIES</td>\n",
-       "      <td>14 OZ</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>92348</th>\n",
-       "      <td>18293142</td>\n",
-       "      <td>6384</td>\n",
-       "      <td>DRUG GM</td>\n",
-       "      <td>National</td>\n",
-       "      <td>BOOKSTORE</td>\n",
-       "      <td>PAPERBACK BOOKS</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>92349</th>\n",
-       "      <td>18293439</td>\n",
-       "      <td>6393</td>\n",
-       "      <td>DRUG GM</td>\n",
-       "      <td>National</td>\n",
-       "      <td>BOOKSTORE</td>\n",
-       "      <td>CHILDRENS LOW END</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>92350</th>\n",
-       "      <td>18293696</td>\n",
-       "      <td>6406</td>\n",
-       "      <td>DRUG GM</td>\n",
-       "      <td>National</td>\n",
-       "      <td>BOOKSTORE</td>\n",
-       "      <td>PAPERBACK BEST SELLER</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>92351</th>\n",
-       "      <td>18294080</td>\n",
-       "      <td>6442</td>\n",
-       "      <td>DRUG GM</td>\n",
-       "      <td>National</td>\n",
-       "      <td>BOOKSTORE</td>\n",
-       "      <td>PAPERBACK BOOKS</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>92352</th>\n",
-       "      <td>18316298</td>\n",
-       "      <td>764</td>\n",
-       "      <td>GROCERY</td>\n",
-       "      <td>National</td>\n",
-       "      <td>PAPER TOWELS</td>\n",
-       "      <td>PAPER TOWELS &amp; HOLDERS</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>92353 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        item_id  manufacturer    department     brand  \\\n",
-       "0         25671             2       GROCERY  National   \n",
-       "1         26081             2  MISC. TRANS.  National   \n",
-       "2         26093            69        PASTRY   Private   \n",
-       "3         26190            69       GROCERY   Private   \n",
-       "4         26355            69       GROCERY   Private   \n",
-       "...         ...           ...           ...       ...   \n",
-       "92348  18293142          6384       DRUG GM  National   \n",
-       "92349  18293439          6393       DRUG GM  National   \n",
-       "92350  18293696          6406       DRUG GM  National   \n",
-       "92351  18294080          6442       DRUG GM  National   \n",
-       "92352  18316298           764       GROCERY  National   \n",
-       "\n",
-       "                 commodity_desc           sub_commodity_desc  \\\n",
-       "0                      FRZN ICE          ICE - CRUSHED/CUBED   \n",
-       "1      NO COMMODITY DESCRIPTION  NO SUBCOMMODITY DESCRIPTION   \n",
-       "2                         BREAD         BREAD:ITALIAN/FRENCH   \n",
-       "3          FRUIT - SHELF STABLE                  APPLE SAUCE   \n",
-       "4                 COOKIES/CONES            SPECIALTY COOKIES   \n",
-       "...                         ...                          ...   \n",
-       "92348                 BOOKSTORE              PAPERBACK BOOKS   \n",
-       "92349                 BOOKSTORE            CHILDRENS LOW END   \n",
-       "92350                 BOOKSTORE        PAPERBACK BEST SELLER   \n",
-       "92351                 BOOKSTORE              PAPERBACK BOOKS   \n",
-       "92352              PAPER TOWELS       PAPER TOWELS & HOLDERS   \n",
-       "\n",
-       "      curr_size_of_product  \n",
-       "0                    22 LB  \n",
-       "1                           \n",
-       "2                           \n",
-       "3                    50 OZ  \n",
-       "4                    14 OZ  \n",
-       "...                    ...  \n",
-       "92348                       \n",
-       "92349                       \n",
-       "92350                       \n",
-       "92351                       \n",
-       "92352                       \n",
-       "\n",
-       "[92353 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 130,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "item_features"
+    "# Get new feature \n",
+    "def get_feature(group_by, agg_col, agg_func, denominator_flag=False, denominator_num='week_no'):\n",
+    "    # base value of denominator\n",
+    "    denominator = 1\n",
+    "    \n",
+    "    # if flag == true then calculate number of unique value for denominator\n",
+    "    if denominator_flag:\n",
+    "        denominator = df_join_train_matcher[denominator_num].nunique()\n",
+    "    \n",
+    "    # return new column as Series \n",
+    "    return X_train.merge(df_join_train_matcher.groupby(by=group_by)[agg_col].agg(agg_func)\\\n",
+    "                         .rename('new_feature')/denominator, \n",
+    "                         how='left', \n",
+    "                         on=group_by).iloc[:, -1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db934913-2a2e-41fa-816e-e2f5a5dc80aa",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Add Item features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "id": "b5d78fc7-50a5-4f55-b925-0ff9845fe654",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# X_train = X_train.drop(columns=['item_freq_per_basket'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "id": "6f6d0b49-6b36-45c4-a29a-b9d6bc9576ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train['total_item_sales_value'] = get_feature('item_id', 'sales_value', 'sum')\n",
+    "\n",
+    "X_train['total_quantity_value'] = get_feature('item_id', 'quantity', 'sum')\n",
+    "\n",
+    "X_train['item_freq'] = get_feature('item_id', 'user_id', 'count')\n",
+    "\n",
+    "X_train['item_quantity_per_week'] = get_feature('item_id', 'quantity', 'sum', True, 'week_no')\n",
+    "\n",
+    "X_train['item_quantity_per_basket'] = get_feature('item_id', 'quantity', 'sum', True, 'basket_id')\n",
+    "\n",
+    "X_train['item_freq_per_basket'] = get_feature('item_id', 'user_id', 'count', True, 'basket_id')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f09b1e2-5e02-4743-8d1b-ae80db535e59",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Add User features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "id": "4a4e3b6c-ce0e-45d0-ba8e-153e7e9d436d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train['user_freq'] = get_feature('user_id', 'user_id', 'count')\n",
+    "\n",
+    "X_train['total_user_sales_value'] = get_feature('user_id', 'sales_value', 'sum')\n",
+    "\n",
+    "X_train['user_quantity_per_week'] = get_feature('user_id', 'quantity', 'sum', True, 'week_no')\n",
+    "\n",
+    "X_train['user_quantity_per_baskter'] = get_feature('user_id', 'quantity', 'sum', True, 'basket_id')\n",
+    "\n",
+    "X_train['user_freq_per_basket'] = get_feature('user_id', 'user_id', 'count', True, 'basket_id')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0a1fdb9-39ed-4ad8-bd6a-34b25cccebde",
+   "metadata": {},
+   "source": [
+    "### Add pair User-Item features"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b8892fc-f06a-46df-8d57-65f9a41dab8d",
+   "id": "1a4f7c01-df99-4376-98d5-9c54c68bec49",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19f52fa8-0b08-4a7b-b439-088da2b84395",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba9f1c87-469b-445e-9c16-536acb7dbc3e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8d79bdd-d8b5-43af-a4a0-027362f6e656",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e89c7b50-d019-401d-a5a1-3d4bb71491d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "id": "b5035aa9-81ef-430c-abed-d8a25b779203",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 38.4 s, sys: 774 ms, total: 39.1 s\n",
+      "Wall time: 5.58 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "lgb.fit(X_train, y_train['target'])\n",
+    "\n",
+    "train_preds = lgb.predict_proba(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "id": "3090a8c9-b0b4-47d2-b354-a0d817a9fb17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 38min 35s, sys: 31.1 s, total: 39min 6s\n",
+      "Wall time: 5min 46s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "model.fit(X_train, y_train, silent=True, cat_features=cat_feats)\n",
+    "\n",
+    "train_preds = model.predict(X_train, prediction_type=\"Probability\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "id": "1f1dec40-4861-42c2-b6b7-e1d78070d2f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ranker_predict['proba_item_purchase'] = train_preds[:,1]\n",
+    "\n",
+    "result_eval_ranker['reranked_own_rec'] = result_eval_ranker['user_id'].apply(lambda user_id: rerank(user_id))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "id": "6d520835-e035-4aae-a8fc-b5f5e5ad71dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('reranked_own_rec', 0.15776672194582497)\n",
+      "('own_rec', 0.12586298459904327)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(*sorted(calc_precision(result_eval_ranker, TOPK_PRECISION), key=lambda x: x[1], reverse=True), sep='\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b21741b-9e3b-434a-9058-7bfd773eba13",
    "metadata": {},
    "outputs": [],
    "source": []
