add paired user-item features, growth 116.5%

--- a/train.ipynb
+++ b/train.ipynb
@@ -679,7 +679,7 @@
     "# data for train 2-nd layer model (ranking)      -- 6 weeks --\n",
     "data_train_ranker = data_val_matcher.copy()\n",
     "\n",
-    "# data for validate 2-nd layer model (ranking)   -- test data --\n",
+    "# data for validate 2-nd layer model (ranking)   -- 3 weeks (test data) --\n",
     "data_val_ranker = test.copy()"
    ]
   },
@@ -730,7 +730,7 @@
     "tags": []
    },
    "source": [
-    "### Prefinter data_train_matcher"
+    "### Prefilter data_train_matcher"
    ]
   },
   {
@@ -1721,7 +1721,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# make new dataset for convenience\n",
+    "# make new dataset for convenience  -- 6 weeks --\n",
     "df_ranker_train = data_train_ranker[['user_id', 'item_id']].copy()\n",
     "# only purchases\n",
     "df_ranker_train['target'] = 1"
@@ -2497,25 +2497,57 @@
   {
    "cell_type": "markdown",
    "id": "aadddd9c-dac2-498d-90f0-3525ea8251bf",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Prepare data"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c990aaa5-a49b-44f9-8ff2-2109a834befd",
+   "metadata": {},
+   "source": [
+    "For best ranking result we need take raw data without prefilter function"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 501,
+   "id": "088c5f4d-9c75-4a6a-82b9-9b8189b88932",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# take raw data_train_matcher without prefilter\n",
+    "data_train_matcher_feats = data[data['week_no'] < data['week_no'].max() - VAL_MATCHER_WEEKS]\n",
+    "\n",
+    "# but still exclude cold-start\n",
+    "data_train_matcher_feats = data_train_matcher_feats[data_train_matcher_feats.user_id.isin(common_users)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6169922b-a3a0-4c80-ab62-a8eabfc2ab77",
+   "metadata": {},
+   "source": [
+    "data_val_matcher already has raw data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 502,
    "id": "f550f0cf-05b3-4ae7-a3b0-5cba3933f201",
    "metadata": {},
    "outputs": [],
    "source": [
     "# make joined dataset from 1-st layer (matching)  -- old weeks + 6 weeks --\n",
-    "df_join_train_matcher = pd.concat([data_train_matcher, data_val_matcher])"
+    "df_join_train_matcher = pd.concat([data_train_matcher_feats, data_val_matcher])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 503,
    "id": "46cebd47-64f2-44b1-9c86-d5df92b2c858",
    "metadata": {},
    "outputs": [
@@ -2552,57 +2584,54 @@
        "      <th>week_no</th>\n",
        "      <th>coupon_disc</th>\n",
        "      <th>coupon_match_disc</th>\n",
-       "      <th>price</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>0</th>\n",
        "      <td>2375</td>\n",
-       "      <td>26984851516</td>\n",
+       "      <td>26984851472</td>\n",
        "      <td>1</td>\n",
-       "      <td>1085983</td>\n",
+       "      <td>1004906</td>\n",
        "      <td>1</td>\n",
-       "      <td>2.99</td>\n",
+       "      <td>1.39</td>\n",
        "      <td>364</td>\n",
-       "      <td>-0.4</td>\n",
-       "      <td>1642</td>\n",
+       "      <td>-0.6</td>\n",
+       "      <td>1631</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>1364</td>\n",
-       "      <td>26984896261</td>\n",
+       "      <th>1</th>\n",
+       "      <td>2375</td>\n",
+       "      <td>26984851472</td>\n",
        "      <td>1</td>\n",
-       "      <td>999999</td>\n",
+       "      <td>1033142</td>\n",
        "      <td>1</td>\n",
-       "      <td>2.19</td>\n",
-       "      <td>31742</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>364</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1520</td>\n",
+       "      <td>1631</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.19</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    user_id    basket_id  day  item_id  quantity  sales_value  store_id  \\\n",
-       "7      2375  26984851516    1  1085983         1         2.99       364   \n",
-       "11     1364  26984896261    1   999999         1         2.19     31742   \n",
+       "   user_id    basket_id  day  item_id  quantity  sales_value  store_id  \\\n",
+       "0     2375  26984851472    1  1004906         1         1.39       364   \n",
+       "1     2375  26984851472    1  1033142         1         0.82       364   \n",
        "\n",
-       "    retail_disc  trans_time  week_no  coupon_disc  coupon_match_disc  price  \n",
-       "7          -0.4        1642        1          0.0                0.0   2.99  \n",
-       "11          0.0        1520        1          0.0                0.0   2.19  "
+       "   retail_disc  trans_time  week_no  coupon_disc  coupon_match_disc  \n",
+       "0         -0.6        1631        1          0.0                0.0  \n",
+       "1          0.0        1631        1          0.0                0.0  "
       ]
      },
-     "execution_count": 143,
+     "execution_count": 503,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2613,7 +2642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 554,
    "id": "5e52a46c-acb8-4a1e-ba44-4607abac2013",
    "metadata": {},
    "outputs": [],
@@ -2631,7 +2660,7 @@
     "    return X_train.merge(df_join_train_matcher.groupby(by=group_by)[agg_col].agg(agg_func)\\\n",
     "                         .rename('new_feature')/denominator, \n",
     "                         how='left', \n",
-    "                         on=group_by).iloc[:, -1]"
+    "                         on=group_by).iloc[:, -1].fillna(0)"
    ]
   },
   {
@@ -2646,17 +2675,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 532,
    "id": "b5d78fc7-50a5-4f55-b925-0ff9845fe654",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# X_train = X_train.drop(columns=['item_freq_per_basket'])"
+    "# X_train = X_train.drop(columns=X_train.columns[15:].tolist())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 522,
    "id": "6f6d0b49-6b36-45c4-a29a-b9d6bc9576ef",
    "metadata": {},
    "outputs": [],
@@ -2686,7 +2715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 523,
    "id": "4a4e3b6c-ce0e-45d0-ba8e-153e7e9d436d",
    "metadata": {},
    "outputs": [],
@@ -2707,75 +2736,161 @@
    "id": "b0a1fdb9-39ed-4ad8-bd6a-34b25cccebde",
    "metadata": {},
    "source": [
-    "### Add pair User-Item features"
+    "### Add paired User-Item features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1a4f7c01-df99-4376-98d5-9c54c68bec49",
+   "execution_count": 555,
+   "id": "22117c8d-844a-444e-ba15-4a729b70fa2a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train['user_item_total_sales'] = get_feature(['user_id', 'item_id'], 'sales_value', 'sum')\n",
+    "\n",
+    "X_train['user_item_total_quantity'] = get_feature(['user_id', 'item_id'], 'quantity', 'sum')\n",
+    "\n",
+    "X_train['user_item_freq'] = get_feature(['user_id', 'item_id'], 'user_id', 'count')\n",
+    "\n",
+    "X_train['user_item_quantity_per_week'] = get_feature(['user_id', 'item_id'], 'quantity', 'sum', True, 'week_no')\n",
+    "\n",
+    "X_train['user_item_quantity_per_baskter'] = get_feature(['user_id', 'item_id'], 'quantity', 'sum', True, 'basket_id')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "19f52fa8-0b08-4a7b-b439-088da2b84395",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba9f1c87-469b-445e-9c16-536acb7dbc3e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8d79bdd-d8b5-43af-a4a0-027362f6e656",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e89c7b50-d019-401d-a5a1-3d4bb71491d4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 235,
-   "id": "b5035aa9-81ef-430c-abed-d8a25b779203",
+   "execution_count": 556,
+   "id": "69986f8d-282c-4cb6-b751-9fd2c8abb7ca",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 38.4 s, sys: 774 ms, total: 39.1 s\n",
-      "Wall time: 5.58 s\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>total_item_sales_value</th>\n",
+       "      <th>total_quantity_value</th>\n",
+       "      <th>item_freq</th>\n",
+       "      <th>item_quantity_per_week</th>\n",
+       "      <th>item_quantity_per_basket</th>\n",
+       "      <th>item_freq_per_basket</th>\n",
+       "      <th>user_freq</th>\n",
+       "      <th>total_user_sales_value</th>\n",
+       "      <th>user_quantity_per_week</th>\n",
+       "      <th>user_quantity_per_baskter</th>\n",
+       "      <th>user_freq_per_basket</th>\n",
+       "      <th>user_item_total_sales</th>\n",
+       "      <th>user_item_total_quantity</th>\n",
+       "      <th>user_item_freq</th>\n",
+       "      <th>user_item_quantity_per_week</th>\n",
+       "      <th>user_item_quantity_per_baskter</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>243.93</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>0.757895</td>\n",
+       "      <td>0.000280</td>\n",
+       "      <td>0.000198</td>\n",
+       "      <td>439.0</td>\n",
+       "      <td>1153.65</td>\n",
+       "      <td>91.294737</td>\n",
+       "      <td>0.033749</td>\n",
+       "      <td>0.001708</td>\n",
+       "      <td>37.64</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>0.115789</td>\n",
+       "      <td>0.000043</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>449.74</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>0.852632</td>\n",
+       "      <td>0.000315</td>\n",
+       "      <td>0.000304</td>\n",
+       "      <td>439.0</td>\n",
+       "      <td>1153.65</td>\n",
+       "      <td>91.294737</td>\n",
+       "      <td>0.033749</td>\n",
+       "      <td>0.001708</td>\n",
+       "      <td>39.93</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.073684</td>\n",
+       "      <td>0.000027</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   total_item_sales_value  total_quantity_value  item_freq  \\\n",
+       "0                  243.93                  72.0       51.0   \n",
+       "1                  449.74                  81.0       78.0   \n",
+       "\n",
+       "   item_quantity_per_week  item_quantity_per_basket  item_freq_per_basket  \\\n",
+       "0                0.757895                  0.000280              0.000198   \n",
+       "1                0.852632                  0.000315              0.000304   \n",
+       "\n",
+       "   user_freq  total_user_sales_value  user_quantity_per_week  \\\n",
+       "0      439.0                 1153.65               91.294737   \n",
+       "1      439.0                 1153.65               91.294737   \n",
+       "\n",
+       "   user_quantity_per_baskter  user_freq_per_basket  user_item_total_sales  \\\n",
+       "0                   0.033749              0.001708                  37.64   \n",
+       "1                   0.033749              0.001708                  39.93   \n",
+       "\n",
+       "   user_item_total_quantity  user_item_freq  user_item_quantity_per_week  \\\n",
+       "0                      11.0            11.0                     0.115789   \n",
+       "1                       7.0             7.0                     0.073684   \n",
+       "\n",
+       "   user_item_quantity_per_baskter  \n",
+       "0                        0.000043  \n",
+       "1                        0.000027  "
+      ]
+     },
+     "execution_count": 556,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%time\n",
-    "\n",
-    "lgb.fit(X_train, y_train['target'])\n",
-    "\n",
-    "train_preds = lgb.predict_proba(X_train)"
+    "X_train.iloc[:, 15:].head(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d80debf9-abea-44ca-b839-1f4d0bbb289a",
+   "metadata": {},
+   "source": [
+    "### Evaluate CatBoost"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 558,
    "id": "3090a8c9-b0b4-47d2-b354-a0d817a9fb17",
    "metadata": {},
    "outputs": [
@@ -2783,8 +2898,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 38min 35s, sys: 31.1 s, total: 39min 6s\n",
-      "Wall time: 5min 46s\n"
+      "CPU times: user 40min 3s, sys: 35.8 s, total: 40min 38s\n",
+      "Wall time: 6min 3s\n"
      ]
     }
    ],
@@ -2798,7 +2913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 559,
    "id": "1f1dec40-4861-42c2-b6b7-e1d78070d2f3",
    "metadata": {},
    "outputs": [],
@@ -2810,7 +2925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 550,
    "id": "6d520835-e035-4aae-a8fc-b5f5e5ad71dc",
    "metadata": {},
    "outputs": [
@@ -2818,7 +2933,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('reranked_own_rec', 0.15776672194582497)\n",
+      "('reranked_own_rec', 0.27252625760088234)\n",
       "('own_rec', 0.12586298459904327)\n"
      ]
     }
@@ -2829,8 +2944,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 578,
+   "id": "d7a48344-2367-4864-9949-37c938737c65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Relative growth is 116.5 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Relative growth is {round((0.27252625760088234 - 0.12586298459904327) / 0.12586298459904327 * 100, 1)} %')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0b21741b-9e3b-434a-9058-7bfd773eba13",
+   "id": "fde88c84-c141-4dfb-8f11-34ebbd643517",
    "metadata": {},
    "outputs": [],
    "source": []
