change general information

--- a/train.ipynb
+++ b/train.ipynb
@@ -9,13 +9,17 @@
    "source": [
     "# Two-layer hybrid recommender system in retail\n",
     "\n",
-    "**Data:** from [Retail X5 Hero Competition](https://retailhero.ai/c/recommender_system/overview)\n",
     "\n",
     "**Stack:**\n",
     "\n",
     "- 1-st layer: NLP, Implicit, ItemItemRecommender, ALS, sklearn, pandas, numpy, matplotlib\n",
     "- 2-nd layer: CatBoost, LightGBM\n",
-    "\n"
+    "\n",
+    "**Data:** from [Retail X5 Hero Competition](https://retailhero.ai/c/recommender_system/overview)\n",
+    "\n",
+    "\n",
+    "**Task:** \n",
+    "Create two-layer hybrid recommender system for retail data and evaluate it by custom **Precision@k**."
    ]
   },
   {
@@ -3068,6 +3072,14 @@
    "source": [
     "With the two-layer model is possible significantly growth **Precision** metric for recommender system."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "caa9a64e-3b46-4b82-8df2-2726214ac22b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
