--- a/train.ipynb
+++ b/train.ipynb
@@ -833,7 +833,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e2e98293b3a438ebf9588c4ee3c9b68",
+       "model_id": "cfd2886008d74260868b3806a7d730b2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -847,7 +847,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb0b1e2a204941bf9c6fcc51f2961739",
+       "model_id": "efe6246238714201b0425a9375e2ff0b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -963,8 +963,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 24s, sys: 1.39 s, total: 1min 26s\n",
-      "Wall time: 27 s\n"
+      "CPU times: user 1min 20s, sys: 1.16 s, total: 1min 22s\n",
+      "Wall time: 25.5 s\n"
      ]
     }
    ],
@@ -1025,8 +1025,8 @@
        "      <td>1</td>\n",
        "      <td>[829323, 835108, 836423, 851515, 875240, 87737...</td>\n",
        "      <td>[856942, 9297615, 5577022, 877391, 9655212, 88...</td>\n",
-       "      <td>[13417139, 1007512, 5577022, 826120, 1132231, ...</td>\n",
-       "      <td>[1036930, 1094924, 8293439, 909497, 12352201, ...</td>\n",
+       "      <td>[10121739, 1007512, 5577022, 9297615, 9803545,...</td>\n",
+       "      <td>[959455, 1037332, 883616, 908312, 856942, 9202...</td>\n",
        "      <td>[1029743, 1106523, 5569230, 916122, 844179, 11...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1035,7 +1035,7 @@
        "      <td>[895388, 8357614, 12301772, 821083, 828106, 83...</td>\n",
        "      <td>[1103898, 911974, 1076580, 5567582, 1056620, 9...</td>\n",
        "      <td>[1044078, 8090509, 5569845, 985999, 819978, 88...</td>\n",
-       "      <td>[5569230, 1090931, 1102067, 1029743, 1041796, ...</td>\n",
+       "      <td>[5569230, 1051211, 1102067, 1029743, 12262832,...</td>\n",
        "      <td>[1029743, 1106523, 5569230, 916122, 844179, 11...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1052,12 +1052,12 @@
        "1  [1103898, 911974, 1076580, 5567582, 1056620, 9...   \n",
        "\n",
        "                                        sim_item_rec  \\\n",
-       "0  [13417139, 1007512, 5577022, 826120, 1132231, ...   \n",
+       "0  [10121739, 1007512, 5577022, 9297615, 9803545,...   \n",
        "1  [1044078, 8090509, 5569845, 985999, 819978, 88...   \n",
        "\n",
        "                                             als_rec  \\\n",
-       "0  [1036930, 1094924, 8293439, 909497, 12352201, ...   \n",
-       "1  [5569230, 1090931, 1102067, 1029743, 1041796, ...   \n",
+       "0  [959455, 1037332, 883616, 908312, 856942, 9202...   \n",
+       "1  [5569230, 1051211, 1102067, 1029743, 12262832,...   \n",
        "\n",
        "                                             top_rec  \n",
        "0  [1029743, 1106523, 5569230, 916122, 844179, 11...  \n",
@@ -1126,9 +1126,9 @@
      "data": {
       "text/plain": [
        "[('own_rec', 0.06350702403477008),\n",
-       " ('als_rec', 0.04553256182990252),\n",
+       " ('als_rec', 0.046970428523642006),\n",
        " ('top_rec', 0.04278333356137788),\n",
-       " ('sim_item_rec', 0.034145686737172824)]"
+       " ('sim_item_rec', 0.03406394753010391)]"
       ]
      },
      "execution_count": 27,
@@ -1176,8 +1176,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 48.1 s, sys: 228 ms, total: 48.3 s\n",
-      "Wall time: 48.5 s\n"
+      "CPU times: user 50.6 s, sys: 303 ms, total: 50.9 s\n",
+      "Wall time: 51.1 s\n"
      ]
     }
    ],
@@ -1240,8 +1240,8 @@
        "      <td>1</td>\n",
        "      <td>[829323, 835108, 836423, 851515, 875240, 87737...</td>\n",
        "      <td>[856942, 9297615, 5577022, 877391, 9655212, 88...</td>\n",
-       "      <td>[13417139, 1007512, 5577022, 826120, 1132231, ...</td>\n",
-       "      <td>[1036930, 1094924, 8293439, 909497, 12352201, ...</td>\n",
+       "      <td>[10121739, 1007512, 5577022, 9297615, 9803545,...</td>\n",
+       "      <td>[959455, 1037332, 883616, 908312, 856942, 9202...</td>\n",
        "      <td>[1029743, 1106523, 5569230, 916122, 844179, 11...</td>\n",
        "      <td>[856942, 9297615, 5577022, 877391, 9655212, 88...</td>\n",
        "      <td>[856942, 9297615, 5577022, 877391, 9655212, 88...</td>\n",
@@ -1259,7 +1259,7 @@
        "      <td>[895388, 8357614, 12301772, 821083, 828106, 83...</td>\n",
        "      <td>[1103898, 911974, 1076580, 5567582, 1056620, 9...</td>\n",
        "      <td>[1044078, 8090509, 5569845, 985999, 819978, 88...</td>\n",
-       "      <td>[5569230, 1090931, 1102067, 1029743, 1041796, ...</td>\n",
+       "      <td>[5569230, 1051211, 1102067, 1029743, 12262832,...</td>\n",
        "      <td>[1029743, 1106523, 5569230, 916122, 844179, 11...</td>\n",
        "      <td>[1103898, 911974, 1076580, 5567582, 1056620, 9...</td>\n",
        "      <td>[1103898, 911974, 1076580, 5567582, 1056620, 9...</td>\n",
@@ -1285,12 +1285,12 @@
        "1  [1103898, 911974, 1076580, 5567582, 1056620, 9...   \n",
        "\n",
        "                                        sim_item_rec  \\\n",
-       "0  [13417139, 1007512, 5577022, 826120, 1132231, ...   \n",
+       "0  [10121739, 1007512, 5577022, 9297615, 9803545,...   \n",
        "1  [1044078, 8090509, 5569845, 985999, 819978, 88...   \n",
        "\n",
        "                                             als_rec  \\\n",
-       "0  [1036930, 1094924, 8293439, 909497, 12352201, ...   \n",
-       "1  [5569230, 1090931, 1102067, 1029743, 1041796, ...   \n",
+       "0  [959455, 1037332, 883616, 908312, 856942, 9202...   \n",
+       "1  [5569230, 1051211, 1102067, 1029743, 12262832,...   \n",
        "\n",
        "                                             top_rec  \\\n",
        "0  [1029743, 1106523, 5569230, 916122, 844179, 11...   \n",
@@ -1514,8 +1514,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.58 s, sys: 33.2 ms, total: 5.61 s\n",
-      "Wall time: 5.64 s\n"
+      "CPU times: user 5.92 s, sys: 54.3 ms, total: 5.97 s\n",
+      "Wall time: 6.02 s\n"
      ]
     }
    ],
@@ -2080,8 +2080,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 32.9 s, sys: 438 ms, total: 33.3 s\n",
-      "Wall time: 4.7 s\n"
+      "CPU times: user 32.9 s, sys: 488 ms, total: 33.4 s\n",
+      "Wall time: 4.64 s\n"
      ]
     }
    ],
@@ -2245,8 +2245,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.35 s, sys: 402 ms, total: 5.75 s\n",
-      "Wall time: 5.79 s\n"
+      "CPU times: user 5.19 s, sys: 407 ms, total: 5.6 s\n",
+      "Wall time: 5.63 s\n"
      ]
     }
    ],
@@ -2427,8 +2427,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 38min 25s, sys: 29.4 s, total: 38min 55s\n",
-      "Wall time: 5min 51s\n"
+      "CPU times: user 37min 31s, sys: 28.6 s, total: 38min\n",
+      "Wall time: 6min 4s\n"
      ]
     }
    ],
@@ -2515,7 +2515,7 @@
    "id": "c990aaa5-a49b-44f9-8ff2-2109a834befd",
    "metadata": {},
    "source": [
-    "For best ranking result we need take raw data without prefilter function"
+    "We need take prefiltered data for train. It will be worse approximately 10% for precision metric, but better for business metric in long-term perspective."
    ]
   },
   {
@@ -2525,19 +2525,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# take raw data_train_matcher without prefilter\n",
-    "data_train_matcher_feats = data[data['week_no'] < data['week_no'].max() - VAL_MATCHER_WEEKS]\n",
-    "\n",
-    "# but still exclude cold-start\n",
-    "data_train_matcher_feats = data_train_matcher_feats[data_train_matcher_feats.user_id.isin(common_users)]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6169922b-a3a0-4c80-ab62-a8eabfc2ab77",
-   "metadata": {},
-   "source": [
-    "data_val_matcher already has raw data"
+    "# make prefiltered data\n",
+    "data_val_matcher = prefilter_items(data_val_matcher, item_features=item_features, take_n_popular=5000)"
    ]
   },
   {
@@ -2548,7 +2537,7 @@
    "outputs": [],
    "source": [
     "# make joined dataset from 1-st layer (matching)  -- old weeks + 6 weeks --\n",
-    "df_join_train_matcher = pd.concat([data_train_matcher_feats, data_val_matcher])"
+    "df_join_train_matcher = pd.concat([data_train_matcher, data_val_matcher])"
    ]
   },
   {
@@ -2590,51 +2579,54 @@
        "      <th>week_no</th>\n",
        "      <th>coupon_disc</th>\n",
        "      <th>coupon_match_disc</th>\n",
+       "      <th>price</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>7</th>\n",
        "      <td>2375</td>\n",
-       "      <td>26984851472</td>\n",
+       "      <td>26984851516</td>\n",
        "      <td>1</td>\n",
-       "      <td>1004906</td>\n",
+       "      <td>1085983</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.39</td>\n",
+       "      <td>2.99</td>\n",
        "      <td>364</td>\n",
-       "      <td>-0.6</td>\n",
-       "      <td>1631</td>\n",
+       "      <td>-0.4</td>\n",
+       "      <td>1642</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>2.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2375</td>\n",
-       "      <td>26984851472</td>\n",
+       "      <th>11</th>\n",
+       "      <td>1364</td>\n",
+       "      <td>26984896261</td>\n",
        "      <td>1</td>\n",
-       "      <td>1033142</td>\n",
+       "      <td>999999</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.82</td>\n",
-       "      <td>364</td>\n",
+       "      <td>2.19</td>\n",
+       "      <td>31742</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1631</td>\n",
+       "      <td>1520</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>2.19</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   user_id    basket_id  day  item_id  quantity  sales_value  store_id  \\\n",
-       "0     2375  26984851472    1  1004906         1         1.39       364   \n",
-       "1     2375  26984851472    1  1033142         1         0.82       364   \n",
+       "    user_id    basket_id  day  item_id  quantity  sales_value  store_id  \\\n",
+       "7      2375  26984851516    1  1085983         1         2.99       364   \n",
+       "11     1364  26984896261    1   999999         1         2.19     31742   \n",
        "\n",
-       "   retail_disc  trans_time  week_no  coupon_disc  coupon_match_disc  \n",
-       "0         -0.6        1631        1          0.0                0.0  \n",
-       "1          0.0        1631        1          0.0                0.0  "
+       "    retail_disc  trans_time  week_no  coupon_disc  coupon_match_disc  price  \n",
+       "7          -0.4        1642        1          0.0                0.0   2.99  \n",
+       "11          0.0        1520        1          0.0                0.0   2.19  "
       ]
      },
      "execution_count": 66,
@@ -2815,37 +2807,37 @@
        "      <td>72.0</td>\n",
        "      <td>51.0</td>\n",
        "      <td>0.757895</td>\n",
-       "      <td>0.000280</td>\n",
-       "      <td>0.000198</td>\n",
-       "      <td>439.0</td>\n",
-       "      <td>1153.65</td>\n",
-       "      <td>91.294737</td>\n",
-       "      <td>0.033749</td>\n",
-       "      <td>0.001708</td>\n",
+       "      <td>0.000380</td>\n",
+       "      <td>0.000269</td>\n",
+       "      <td>183.0</td>\n",
+       "      <td>784.23</td>\n",
+       "      <td>2.052632</td>\n",
+       "      <td>0.001028</td>\n",
+       "      <td>0.000965</td>\n",
        "      <td>37.64</td>\n",
        "      <td>11.0</td>\n",
        "      <td>11.0</td>\n",
        "      <td>0.115789</td>\n",
-       "      <td>0.000043</td>\n",
+       "      <td>0.000058</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>449.74</td>\n",
-       "      <td>81.0</td>\n",
-       "      <td>78.0</td>\n",
-       "      <td>0.852632</td>\n",
-       "      <td>0.000315</td>\n",
-       "      <td>0.000304</td>\n",
-       "      <td>439.0</td>\n",
-       "      <td>1153.65</td>\n",
-       "      <td>91.294737</td>\n",
-       "      <td>0.033749</td>\n",
-       "      <td>0.001708</td>\n",
-       "      <td>39.93</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>0.073684</td>\n",
-       "      <td>0.000027</td>\n",
+       "      <td>427.78</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>0.810526</td>\n",
+       "      <td>0.000406</td>\n",
+       "      <td>0.000390</td>\n",
+       "      <td>183.0</td>\n",
+       "      <td>784.23</td>\n",
+       "      <td>2.052632</td>\n",
+       "      <td>0.001028</td>\n",
+       "      <td>0.000965</td>\n",
+       "      <td>33.94</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.063158</td>\n",
+       "      <td>0.000032</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2854,27 +2846,27 @@
       "text/plain": [
        "   total_item_sales_value  total_quantity_value  item_freq  \\\n",
        "0                  243.93                  72.0       51.0   \n",
-       "1                  449.74                  81.0       78.0   \n",
+       "1                  427.78                  77.0       74.0   \n",
        "\n",
        "   item_quantity_per_week  item_quantity_per_basket  item_freq_per_basket  \\\n",
-       "0                0.757895                  0.000280              0.000198   \n",
-       "1                0.852632                  0.000315              0.000304   \n",
+       "0                0.757895                  0.000380              0.000269   \n",
+       "1                0.810526                  0.000406              0.000390   \n",
        "\n",
        "   user_freq  total_user_sales_value  user_quantity_per_week  \\\n",
-       "0      439.0                 1153.65               91.294737   \n",
-       "1      439.0                 1153.65               91.294737   \n",
+       "0      183.0                  784.23                2.052632   \n",
+       "1      183.0                  784.23                2.052632   \n",
        "\n",
        "   user_quantity_per_baskter  user_freq_per_basket  user_item_total_sales  \\\n",
-       "0                   0.033749              0.001708                  37.64   \n",
-       "1                   0.033749              0.001708                  39.93   \n",
+       "0                   0.001028              0.000965                  37.64   \n",
+       "1                   0.001028              0.000965                  33.94   \n",
        "\n",
        "   user_item_total_quantity  user_item_freq  user_item_quantity_per_week  \\\n",
        "0                      11.0            11.0                     0.115789   \n",
-       "1                       7.0             7.0                     0.073684   \n",
+       "1                       6.0             6.0                     0.063158   \n",
        "\n",
        "   user_item_quantity_per_baskter  \n",
-       "0                        0.000043  \n",
-       "1                        0.000027  "
+       "0                        0.000058  \n",
+       "1                        0.000032  "
       ]
      },
      "execution_count": 72,
@@ -2911,7 +2903,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_trn, X_val, y_trn, y_val = train_test_split(X_train, y_train, random_state=4)"
+    "X_trn, X_val, y_trn, y_val = train_test_split(X_train, y_train, random_state=42)"
    ]
   },
   {
@@ -2942,7 +2934,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e5a59cfcc0844eda1d67438f8d30a75",
+       "model_id": "5a9e4e0b0d014606ad3a0e3054b4fc80",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2957,8 +2949,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 20min 9s, sys: 21.7 s, total: 20min 31s\n",
-      "Wall time: 3min 9s\n"
+      "CPU times: user 28min 4s, sys: 29.5 s, total: 28min 33s\n",
+      "Wall time: 4min 30s\n"
      ]
     }
    ],
@@ -2968,7 +2960,7 @@
     "model.fit(train_pool, \n",
     "          eval_set=test_pool, \n",
     "          silent=True, \n",
-    "          early_stopping_rounds=80,  # stop if overfitting continues (80 reserve)\n",
+    "          early_stopping_rounds=100,  # stop if overfitting continues (100 is reserve)\n",
     "          plot=True)\n",
     "\n",
     "train_preds = model.predict(X_train, prediction_type=\"Probability\")"
@@ -2984,7 +2976,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tree count this model: 504\n"
+      "Tree count this model: 740\n"
      ]
     }
    ],
@@ -3025,7 +3017,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('reranked_own_rec', 0.2703150912106115)\n",
+      "('reranked_own_rec', 0.25804311774460803)\n",
       "('own_rec', 0.12586298459904327)\n"
      ]
     }
@@ -3046,13 +3038,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Growth relative of baseline is 114.8 %\n"
+      "Growth relative of baseline is 105.0 %\n"
      ]
     }
    ],
    "source": [
     "print(f'Growth relative of baseline is\\\n",
-    " {round((precisions[0][1] - 0.12586298459904327) / 0.12586298459904327 * 100, 1)} %')"
+    " {round((precisions[0][1] - precisions[1][1]) / precisions[1][1] * 100, 1)} %')"
    ]
   },
   {
@@ -3070,13 +3062,13 @@
    "id": "dd8a792f-4086-43b4-927c-0cc85ca0b8de",
    "metadata": {},
    "source": [
-    "With the two-layer model is possible significantly growth **Precision** metric for recommender system."
+    "With the second layer ranking model is possible significantly growth the **Precision** metric for the recommender system."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caa9a64e-3b46-4b82-8df2-2726214ac22b",
+   "id": "66215537-771e-4b09-8f73-6fdd5fc57d57",
    "metadata": {},
    "outputs": [],
    "source": []
