--- a/train.ipynb
+++ b/train.ipynb
@@ -27,7 +27,7 @@
    "id": "97e3891c-3527-4080-bda0-b5b439f03361",
    "metadata": {},
    "source": [
-    "**Stages**:\n",
+    "**Steps**:\n",
     "\n",
     "1. Prepare data:  prefiltering\n",
     "2. Matching model (initialize MainRecommender 1-st layer model as baseline)\n",
