--- a/train.ipynb
+++ b/train.ipynb
@@ -872,6 +872,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8fb59875-0011-4838-b362-c4bad4d8b378",
+   "metadata": {},
+   "source": [
+    "For first-layer model we have taken Recall metric because it is show the proportion of correct answers from real purchases. With this approach we going to significantly cut dataset size for second-layer model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "id": "d44bea25-b7bb-4495-992a-61dbc526f71d",
